overflow issue solved

--- a/designs/Anin Arafath/styles/hero.css
+++ b/designs/Anin Arafath/styles/hero.css
@@ -112,8 +112,9 @@
 }
 
 .hero-img-section>img {
-    /* width: 670px; */
+    width: 670px;
     height: 444px;
+
 
 }
 
