--- a/designs/Anin Arafath/styles/main.css
+++ b/designs/Anin Arafath/styles/main.css
@@ -35,7 +35,7 @@ p {
 body {
 
 
-    overflow-y: hidden;
+    overflow-x: hidden;
 
 
 }
